Draw 50Hz SIN Wave Perfectly.
HAL_Delay(1) was depreciated, it takes too much time. replace it with My_Delay_us(20);

--- a/CAMOverUART/CAMOverUART_tcl.html
+++ b/CAMOverUART/CAMOverUART_tcl.html
@@ -172,6 +172,57 @@ prj_open "F:/MyTemporary/Github/GLPP2024/CAMOverUART/CAMOverUART.rdf"
 
 
 
+<A name="pn240429143920"></A><B><U><big>pn240429143920</big></U></B>
+#Start recording tcl command: 4/29/2024 09:34:23
+#Project Location: F:/MyTemporary/Github/GLPP2024/CAMOverUART; Project name: CAMOverUART
+prj_open "F:/MyTemporary/Github/GLPP2024/CAMOverUART/CAMOverUART.rdf"
+#Stop recording: 4/29/2024 14:39:20
+
+
+
+<A name="pn240515143915"></A><B><U><big>pn240515143915</big></U></B>
+#Start recording tcl command: 5/15/2024 13:36:38
+#Project Location: F:/MyTemporary/Github/GLPP2024/CAMOverUART; Project name: CAMOverUART
+prj_open "F:/MyTemporary/Github/GLPP2024/CAMOverUART/CAMOverUART.rdf"
+prj_run Synthesis -impl impl_1
+prj_run Export -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Map -impl impl_1
+prj_run Map -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Synthesis -impl impl_1
+#Stop recording: 5/15/2024 14:39:15
+
+
+
+<A name="pn240515173157"></A><B><U><big>pn240515173157</big></U></B>
+#Start recording tcl command: 5/15/2024 14:39:26
+#Project Location: F:/MyTemporary/Github/GLPP2024/CAMOverUART; Project name: CAMOverUART
+prj_open "F:/MyTemporary/Github/GLPP2024/CAMOverUART/CAMOverUART.rdf"
+prj_run Synthesis -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Synthesis -impl impl_1
+prj_run Map -impl impl_1
+prj_run Map -impl impl_1
+prj_run Map -impl impl_1
+#Stop recording: 5/15/2024 17:31:57
+
+
+
+<A name="pn240516172634"></A><B><U><big>pn240516172634</big></U></B>
+#Start recording tcl command: 5/16/2024 08:49:03
+#Project Location: F:/MyTemporary/Github/GLPP2024/CAMOverUART; Project name: CAMOverUART
+prj_open "F:/MyTemporary/Github/GLPP2024/CAMOverUART/CAMOverUART.rdf"
+#Stop recording: 5/16/2024 17:26:34
+
+
+
 </PRE></DIV>
 
 <DIV id="toc" class="radiant"><span onmousemove="showTocList()">Contents</span>
@@ -182,6 +233,10 @@ prj_open "F:/MyTemporary/Github/GLPP2024/CAMOverUART/CAMOverUART.rdf"
 <LI><A href=#pn240307105547>pn240307105547</A></LI>
 <LI><A href=#pn240312111016>pn240312111016</A></LI>
 <LI><A href=#pn240426101630>pn240426101630</A></LI>
+<LI><A href=#pn240429143920>pn240429143920</A></LI>
+<LI><A href=#pn240515143915>pn240515143915</A></LI>
+<LI><A href=#pn240515173157>pn240515173157</A></LI>
+<LI><A href=#pn240516172634>pn240516172634</A></LI>
 </UL>
 </DIV>
 
