Not all data read from DDR-PSRAM are correct!

--- a/IRCapture/IRCapture_tcl.html
+++ b/IRCapture/IRCapture_tcl.html
@@ -104,12 +104,64 @@ prj_run Export -impl impl_1
 
 
 
+<A name="pn240919165635"></A><B><U><big>pn240919165635</big></U></B>
+#Start recording tcl command: 9/19/2024 10:06:31
+#Project Location: F:/MyTemporary/Github/GLPP2024/IRCapture; Project name: IRCapture
+prj_open "F:/MyTemporary/Github/GLPP2024/IRCapture/IRCapture.rdf"
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+launch_programmer_prj "F:/MySoftware/Lattice/radiant"
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+launch_programmer_prj "F:/MySoftware/Lattice/radiant"
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+launch_programmer_prj "F:/MySoftware/Lattice/radiant"
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+#Stop recording: 9/19/2024 16:56:35
+
+
+
 </PRE></DIV>
 
 <DIV id="toc" class="radiant"><span onmousemove="showTocList()">Contents</span>
 <UL id="toc_list">
 <LI><A href=#pn240918170359>pn240918170359</A></LI>
 <LI><A href=#pn240919100029>pn240919100029</A></LI>
+<LI><A href=#pn240919165635>pn240919165635</A></LI>
 </UL>
 </DIV>
 
